--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "color-spaces",
-  "version": "1.0.0",
+  "name": "@color-spaces/convert",
+  "version": "1.0.1",
   "description": "Color space conversion utilities",
   "repository": "git@github.com:thibthib/color-spaces.git",
   "author": "Thibaut Dutartre <t.dutartre@gmail.com>",
   "license": "MIT",
-  "private": false,
   "devDependencies": {
     "microbundle": "0.12.0"
   },
   "source": "index.ts",
-  "types": "dist/color-spaces.d.ts",
-  "main": "dist/color-spaces.js",
-  "module": "dist/color-spaces.module.js",
-  "unpkg": "dist/color-spaces.umd.js",
+  "main": "dist/color-spaces-convert.js",
+  "module": "dist/color-spaces-convert.module.js",
+  "unpkg": "dist/color-spaces-convert.umd.js",
   "scripts": {
     "build": "microbundle",
     "dev": "microbundle watch"
